Removed Landing Page and Updated the Name

--- a/i18n/en/docusaurus-theme-classic/footer.json
+++ b/i18n/en/docusaurus-theme-classic/footer.json
@@ -40,7 +40,7 @@
     "description": "The label of footer link with label=LinkedIn linking to https://www.linkedin.com/company/waitechnologies"
   },
   "copyright": {
-    "message": "Copyright © 2024 WAi Technologies. Built with Raaghu Design System.",
+    "message": "Copyright © 2024 Wai Technologies. Built with Raaghu Design System.",
     "description": "The footer copyright"
   }
 }
