--- a/i18n/zh-Hans/docusaurus-theme-classic/footer.json
+++ b/i18n/zh-Hans/docusaurus-theme-classic/footer.json
@@ -40,7 +40,7 @@
     "description": "链接到 https://www.linkedin.com/company/waitechnologies 的页脚链接标签 label=LinkedIn"
   },
   "copyright": {
-    "message": "版权所有 © 2024 WAi Technologies。使用 Raaghu 设计系统开发。",
+    "message": "版权所有 © 2024 Wai Technologies。使用 Raaghu 设计系统开发。",
     "description": "页脚的版权信息"
   }
 }
