--- a/i18n/pt-BR/docusaurus-theme-classic/footer.json
+++ b/i18n/pt-BR/docusaurus-theme-classic/footer.json
@@ -40,7 +40,7 @@
     "description": "O rótulo do link do rodapé com label=LinkedIn linkando para https://www.linkedin.com/company/waitechnologies"
   },
   "copyright": {
-    "message": "Copyright © 2024 WAi Technologies. Desenvolvido com o Sistema de Design Raaghu.",
+    "message": "Copyright © 2024 Wai Technologies. Desenvolvido com o Sistema de Design Raaghu.",
     "description": "O copyright do rodapé"
   }
 }
