--- a/i18n/pt-BR/docusaurus-theme-classic/footer.json
+++ b/i18n/pt-BR/docusaurus-theme-classic/footer.json
@@ -1,46 +1,142 @@
 {
   "link.title.Docs": {
-    "message": "Documentação",
-    "description": "O título da coluna de links do rodapé com title=Docs no rodapé"
+    "message": "Documentos",
+    "description": "The title of the footer links column with title=Docs in the footer"
   },
-  "link.title.Community": {
-    "message": "Comunidade",
-    "description": "O título da coluna de links do rodapé com title=Community no rodapé"
+  "link.title.Application Modules": {
+    "message": "Módulos da Aplicação",
+    "description": "The title of the footer links column with title=Application Modules in the footer"
   },
   "link.title.More": {
     "message": "Mais",
-    "description": "O título da coluna de links do rodapé com title=More no rodapé"
+    "description": "The title of the footer links column with title=More in the footer"
   },
-  "link.item.label.Tutorial": {
-    "message": "Tutorial",
-    "description": "O rótulo do link do rodapé com label=Tutorial linkando para /docs/intro"
+  "link.item.label.Introduction": {
+    "message": "Introdução",
+    "description": "The label of footer link with label=Introduction linking to /docs/intro"
   },
-  "link.item.label.Stack Overflow": {
-    "message": "Stack Overflow",
-    "description": "O rótulo do link do rodapé com label=Stack Overflow linkando para https://stackoverflow.com/questions/tagged/docusaurus"
+  "link.item.label.Getting Started": {
+    "message": "Primeiros Passos",
+    "description": "The label of footer link with label=Getting Started linking to /docs/category/getting-started"
   },
-  "link.item.label.Discord": {
-    "message": "Discord",
-    "description": "O rótulo do link do rodapé com label=Discord linkando para https://discordapp.com/invite/docusaurus"
+  "link.item.label.Tutorials": {
+    "message": "Tutoriais",
+    "description": "The label of footer link with label=Tutorials linking to /docs/category/tutorials"
   },
-  "link.item.label.Twitter": {
-    "message": "Twitter",
-    "description": "O rótulo do link do rodapé com label=Twitter linkando para https://twitter.com/docusaurus"
+  "link.item.label.Guides": {
+    "message": "Guias",
+    "description": "The label of footer link with label=Guides linking to /docs/category/guides"
+  },
+  "link.item.label.CLI": {
+    "message": "CLI",
+    "description": "The label of footer link with label=CLI linking to /docs/category/cli"
+  },
+  "link.item.label.Samples": {
+    "message": "Exemplos",
+    "description": "The label of footer link with label=Samples linking to /docs/category/samples"
+  },
+  "link.item.label.Startup Templates": {
+    "message": "Modelos de Inicialização",
+    "description": "The label of footer link with label=Startup Templates linking to /docs/category/startup-templates"
+  },
+  "link.item.label.Application Modules": {
+    "message": "Módulos da Aplicação",
+    "description": "The label of footer link with label=Application Modules linking to /docs/category/application-modules"
+  },
+  "link.item.label.UI Theme": {
+    "message": "Tema de UI",
+    "description": "The label of footer link with label=UI Theme linking to /docs/category/ui-theme"
+  },
+  "link.item.label.Storybook": {
+    "message": "Storybook",
+    "description": "The label of footer link with label=Storybook linking to /docs/category/storybook"
+  },
+  "link.item.label.React UI": {
+    "message": "Interface do React",
+    "description": "The label of footer link with label=React UI linking to /docs/category/react-ui"
+  },
+  "link.item.label.Release Infromation": {
+    "message": "Informações de Lançamento",
+    "description": "The label of footer link with label=Release Infromation linking to /docs/category/release-information"
+  },
+  "link.item.label.Overall": {
+    "message": "No geral",
+    "description": "The label of footer link with label=Overall linking to docs/Application%20Modules/Overall"
+  },
+  "link.item.label.Account": {
+    "message": "Conta",
+    "description": "The label of footer link with label=Account linking to docs/Application%20Modules/Account-Module"
+  },
+  "link.item.label.Audit Logging": {
+    "message": "Registro de Auditoria",
+    "description": "The label of footer link with label=Audit Logging linking to docs/Application%20Modules/Audit-Logging"
+  },
+  "link.item.label.Chat": {
+    "message": "Bate-papo",
+    "description": "The label of footer link with label=Chat linking to docs/Application%20Modules/Chat-Module"
+  },
+  "link.item.label.CMS Kit Pro": {
+    "message": "Kit CMS Pro",
+    "description": "The label of footer link with label=CMS Kit Pro linking to docs/Application%20Modules/CMS-KIt-Pro"
+  },
+  "link.item.label.File Management": {
+    "message": "Gerenciamento de Arquivos",
+    "description": "The label of footer link with label=File Management linking to docs/Application%20Modules/File-Management"
+  },
+  "link.item.label.Forms": {
+    "message": "Formulários",
+    "description": "The label of footer link with label=Forms linking to docs/Application%20Modules/Forms"
+  },
+  "link.item.label.GDPR": {
+    "message": "GDPR",
+    "description": "The label of footer link with label=GDPR linking to docs/Application%20Modules/GDPR"
+  },
+  "link.item.label.Identity": {
+    "message": "Identidade",
+    "description": "The label of footer link with label=Identity linking to docs/Application%20Modules/Identity"
+  },
+  "link.item.label.OpenIddict": {
+    "message": "OpenIddict",
+    "description": "The label of footer link with label=OpenIddict linking to docs/Application%20Modules/OpenIddict"
+  },
+  "link.item.label.Language Management": {
+    "message": "Gerenciamento de Idioma",
+    "description": "The label of footer link with label=Language Management linking to docs/Application%20Modules/Language-Management"
+  },
+  "link.item.label.Payment": {
+    "message": "Pagamento",
+    "description": "The label of footer link with label=Payment linking to docs/Application%20Modules/Payment"
+  },
+  "link.item.label.SaaS": {
+    "message": "SaaS",
+    "description": "The label of footer link with label=SaaS linking to docs/Application%20Modules/SaaS"
+  },
+  "link.item.label.Text Template Management": {
+    "message": "Gerenciamento de Modelos de Texto",
+    "description": "The label of footer link with label=Text Template Management linking to docs/Application%20Modules/Text-Template-Management"
   },
   "link.item.label.GitHub": {
     "message": "GitHub",
-    "description": "O rótulo do link do rodapé com label=GitHub linkando para https://github.com/Wai-Technologies/raaghu-docs"
-  },
-  "link.item.label.Vimeo": {
-    "message": "Vimeo",
-    "description": "O rótulo do link do rodapé com label=Vimeo linkando para https://vimeo.com/user9603091"
+    "description": "The label of footer link with label=GitHub linking to https://github.com/Wai-Technologies/raaghu-docs"
   },
   "link.item.label.LinkedIn": {
     "message": "LinkedIn",
-    "description": "O rótulo do link do rodapé com label=LinkedIn linkando para https://www.linkedin.com/company/waitechnologies"
+    "description": "The label of footer link with label=LinkedIn linking to https://www.linkedin.com/company/waitechnologies"
+  },
+  "link.item.label.Vimeo": {
+    "message": "Vimeo",
+    "description": "The label of footer link with label=Vimeo linking to https://vimeo.com/user9603091"
+  },
+  "link.item.label.Youtube": {
+    "message": "Youtube",
+    "description": "The label of footer link with label=GitHub linking to https://www.youtube.com/@wai-technologies"
+  },
+  "link.item.label.Twitter": {
+    "message": "Twitter",
+    "description": "The label of footer link with label=Vimeo linking to https://twitter.com/waitechnologies"
   },
   "copyright": {
-    "message": "Copyright © 2024 Wai Technologies. Desenvolvido com o Sistema de Design Raaghu.",
-    "description": "O copyright do rodapé"
+    "message": "Direitos Autorais © 2024 Tecnologias Wai. Construído com o Sistema de Design Raaghu.",
+    "description": "The footer copyright"
   }
 }
