--- a/i18n/pt-BR/docusaurus-theme-classic/navbar.json
+++ b/i18n/pt-BR/docusaurus-theme-classic/navbar.json
@@ -1,10 +1,6 @@
 {
   "logo.alt": {
-    "message": "Logo da Raaghu Documentation",
-    "description": "O texto alternativo do logotipo na barra de navegação"
-  },
-  "item.label.Docs": {
-    "message": "Documentos",
-    "description": "Item na barra de navegação com o rótulo 'Documentos'"
+    "message": "Raaghu Documentation Logo",
+    "description": "The alt text of navbar logo"
   }
 }
