--- a/i18n/pt-BR/docusaurus-plugin-content-docs/current.json
+++ b/i18n/pt-BR/docusaurus-plugin-content-docs/current.json
@@ -46,5 +46,10 @@
   "sidebar.tutorialSidebar.category.Release Information": {
     "message": "Liberar informações",
     "description": "The label for category Release Information in sidebar tutorialSidebar"
+  },
+  "sidebar.tutorialSidebar.category.Deployment": {
+    "message": "implantação",
+    "description": "The label for category Deployment in sidebar tutorialSidebar"
   }
 }
+
