--- a/i18n/en/docusaurus-theme-classic/footer.json
+++ b/i18n/en/docusaurus-theme-classic/footer.json
@@ -3,29 +3,117 @@
     "message": "Docs",
     "description": "The title of the footer links column with title=Docs in the footer"
   },
-  "link.title.Community": {
-    "message": "Community",
-    "description": "The title of the footer links column with title=Community in the footer"
+  "link.title.Application Modules": {
+    "message": "Application Modules",
+    "description": "The title of the footer links column with title=Application Modules in the footer"
   },
   "link.title.More": {
     "message": "More",
     "description": "The title of the footer links column with title=More in the footer"
   },
-  "link.item.label.Tutorial": {
-    "message": "Tutorial",
-    "description": "The label of footer link with label=Tutorial linking to /docs/intro"
+  "link.item.label.Introduction": {
+    "message": "Introduction",
+    "description": "The label of footer link with label=Introduction linking to /docs/intro"
   },
-  "link.item.label.Stack Overflow": {
-    "message": "Stack Overflow",
-    "description": "The label of footer link with label=Stack Overflow linking to https://stackoverflow.com/questions/tagged/docusaurus"
+  "link.item.label.Getting Started": {
+    "message": "Getting Started",
+    "description": "The label of footer link with label=Getting Started linking to /docs/category/getting-started"
   },
-  "link.item.label.Discord": {
-    "message": "Discord",
-    "description": "The label of footer link with label=Discord linking to https://discordapp.com/invite/docusaurus"
+  "link.item.label.Tutorials": {
+    "message": "Tutorials",
+    "description": "The label of footer link with label=Tutorials linking to /docs/category/tutorials"
   },
-  "link.item.label.Twitter": {
-    "message": "Twitter",
-    "description": "The label of footer link with label=Twitter linking to https://twitter.com/docusaurus"
+  "link.item.label.Guides": {
+    "message": "Guides",
+    "description": "The label of footer link with label=Guides linking to /docs/category/guides"
+  },
+  "link.item.label.CLI": {
+    "message": "CLI",
+    "description": "The label of footer link with label=CLI linking to /docs/category/cli"
+  },
+  "link.item.label.Samples": {
+    "message": "Samples",
+    "description": "The label of footer link with label=Samples linking to /docs/category/samples"
+  },
+  "link.item.label.Startup Templates": {
+    "message": "Startup Templates",
+    "description": "The label of footer link with label=Startup Templates linking to /docs/category/startup-templates"
+  },
+  "link.item.label.Application Modules": {
+    "message": "Application Modules",
+    "description": "The label of footer link with label=Application Modules linking to /docs/category/application-modules"
+  },
+  "link.item.label.UI Theme": {
+    "message": "UI Theme",
+    "description": "The label of footer link with label=UI Theme linking to /docs/category/ui-theme"
+  },
+  "link.item.label.Storybook": {
+    "message": "Storybook",
+    "description": "The label of footer link with label=Storybook linking to /docs/category/storybook"
+  },
+  "link.item.label.React UI": {
+    "message": "React UI",
+    "description": "The label of footer link with label=React UI linking to /docs/category/react-ui"
+  },
+  "link.item.label.Release Infromation": {
+    "message": "Release Infromation",
+    "description": "The label of footer link with label=Release Infromation linking to /docs/category/release-information"
+  },
+  "link.item.label.Overall": {
+    "message": "Overall",
+    "description": "The label of footer link with label=Overall linking to docs/Application%20Modules/Overall"
+  },
+  "link.item.label.Account": {
+    "message": "Account",
+    "description": "The label of footer link with label=Account linking to docs/Application%20Modules/Account-Module"
+  },
+  "link.item.label.Audit Logging": {
+    "message": "Audit Logging",
+    "description": "The label of footer link with label=Audit Logging linking to docs/Application%20Modules/Audit-Logging"
+  },
+  "link.item.label.Chat": {
+    "message": "Chat",
+    "description": "The label of footer link with label=Chat linking to docs/Application%20Modules/Chat-Module"
+  },
+  "link.item.label.CMS Kit Pro": {
+    "message": "CMS Kit Pro",
+    "description": "The label of footer link with label=CMS Kit Pro linking to docs/Application%20Modules/CMS-KIt-Pro"
+  },
+  "link.item.label.File Management": {
+    "message": "File Management",
+    "description": "The label of footer link with label=File Management linking to docs/Application%20Modules/File-Management"
+  },
+  "link.item.label.Forms": {
+    "message": "Forms",
+    "description": "The label of footer link with label=Forms linking to docs/Application%20Modules/Forms"
+  },
+  "link.item.label.GDPR": {
+    "message": "GDPR",
+    "description": "The label of footer link with label=GDPR linking to docs/Application%20Modules/GDPR"
+  },
+  "link.item.label.Identity": {
+    "message": "Identity",
+    "description": "The label of footer link with label=Identity linking to docs/Application%20Modules/Identity"
+  },
+  "link.item.label.OpenIddict": {
+    "message": "OpenIddict",
+    "description": "The label of footer link with label=OpenIddict linking to docs/Application%20Modules/OpenIddict"
+  },
+  "link.item.label.Language Management": {
+    "message": "Language Management",
+    "description": "The label of footer link with label=Language Management linking to docs/Application%20Modules/Language-Management"
+  },
+  "link.item.label.Payment": {
+    "message": "Payment",
+    "description": "The label of footer link with label=Payment linking to docs/Application%20Modules/Payment"
+  },
+  "link.item.label.SaaS": {
+    "message": "SaaS",
+    "description": "The label of footer link with label=SaaS linking to docs/Application%20Modules/SaaS"
+  },
+  "link.item.label.Text Template Management": {
+    "message": "Text Template Management",
+    "description": "The label of footer link with label=Text Template Management linking to docs/Application%20Modules/Text-Template-Management"
   },
   "link.item.label.GitHub": {
     "message": "GitHub",
@@ -38,6 +126,14 @@
   "link.item.label.LinkedIn": {
     "message": "LinkedIn",
     "description": "The label of footer link with label=LinkedIn linking to https://www.linkedin.com/company/waitechnologies"
+  },
+  "link.item.label.Youtube": {
+    "message": "Youtube",
+    "description": "The label of footer link with label=Youtube linking to https://www.youtube.com/@wai-technologies"
+  },
+  "link.item.label.Twitter": {
+    "message": "Twitter",
+    "description": "The label of footer link with label=Twitter linking to https://twitter.com/waitechnologies"
   },
   "copyright": {
     "message": "Copyright © 2024 Wai Technologies. Built with Raaghu Design System.",
