--- a/i18n/zh-Hans/docusaurus-plugin-content-docs/version-7.3.json
+++ b/i18n/zh-Hans/docusaurus-plugin-content-docs/version-7.3.json
@@ -1,6 +1,6 @@
 {
   "version.label": {
-    "message": "即将到来",
+    "message": "7.3",
     "description": "The label for version current"
   },
   "sidebar.tutorialSidebar.category.Getting Started": {
